--- a/app/views/welcome/_nav.html.erb
+++ b/app/views/welcome/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">THE COMPUTER SOCIETY OF INDIA</a>
+      <a class="navbar-brand" href="#">COMPUTER SOCIETY OF INDIA - Awards Committee (2017)</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       
