--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">    
 <div class="col-md-5 award-area"> 
-<h3 class="award-head"align="center">ACADEMIC AWARDS</h3>
+<h4 class="award-head"align="center">ACADEMIC AWARDS - STUDENT BRANCH</h4>
 <% if user_signed_in? && is_sbc? %>
 <div class="award-title">
     <p><%= link_to "Best Accredited Student Branch Award" , new_bestaccreditedstudentbranch_path %> </p>
@@ -23,18 +23,6 @@
 <div class="award-title">
     <p><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </p>
 </div>
-
-
-<% end %>
-<% if user_signed_in?  %>
-<div class="award-title">
-    <p><%= link_to "Faculty with maximum publishing  in CSI Publications" ,new_facmaxpublishing_path %> </p>
-</div>
-<div class="award-title">
-    <p><%= link_to "Paper Presenter at International Conference for Faculty" ,new_paperpresenter_path %> </p>
-</div>
-<% end %>
-<% if user_signed_in? && is_sbc? %>
 <div class="award-title">
     <p><%= link_to "Students with maximum publishing – CSI publications" ,new_studentmaxpublishing_path %> </p>
 </div>
@@ -43,7 +31,15 @@
     <p><%= link_to "Highest Committed Student Branch Activist Award" ,new_studentbranchactivist_path %> </p>
 </div>
 <% end %>
+
+<h4 class="award-head"align="center">ACADEMIC AWARDS - INDIVIDUAL</h4>
 <% if user_signed_in?  %>
+<div class="award-title">
+    <p><%= link_to "Faculty with maximum publishing  in CSI Publications" ,new_facmaxpublishing_path %> </p>
+</div>
+<div class="award-title">
+    <p><%= link_to "Paper Presenter at International Conference for Faculty" ,new_paperpresenter_path %> </p>
+</div>
 <div class="award-title">
     <p><%= link_to "Best Ph D Thesis Award" ,new_bestthesisaward_path %> </p>
 </div>
@@ -51,7 +47,7 @@
 </div>
 
 <div class="col-md-5 award-area">  
-<h3  class="award-head servie-awards" align="center">SERVICE AWARDS</h3>
+<h4  class="award-head servie-awards" align="center">SERVICE AWARDS</h4>
 <% if user_signed_in?  %>
 <div class="award-title">
     <p><%= link_to "Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
