--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -36,8 +36,8 @@ software competition participated by a minimum of 10 students from abroad 01/07/
     <div class="form-group col-md-2">
       <label>Valid Till</label>
       <input type="text" class="form-control" id="valid_till"  value="
-      <% unless current_sbc_user_data.institute.valid_till.nil? %>
-      <%= current_sbc_user_data.institute.valid_till %>
+      <% unless current_sbc_user_data.institute.valid_date.nil? %>
+      <%= current_sbc_user_data.institute.valid_date %>
       <% else %>
       <%= "Not available" %>
       <% end %>
