--- a/app/views/bestthesisawards/_form.html.erb
+++ b/app/views/bestthesisawards/_form.html.erb
@@ -37,8 +37,8 @@
       <%= f.text_field :name_of_nominator ,  required: true  , class: "form-control" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.label :designation , "Designation of Nominator" %>
-      <%= f.text_field :designation  ,  required: true , class: "form-control" %>
+      <%= f.label :designation_of_nominator , "Designation of Nominator" %>
+      <%= f.text_field :designation_of_nominator  ,  required: true , class: "form-control" %>
     </div>
     <div class="form-group col-md-3">
       <%= f.label :nominator_email %>
