first commit for the day

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -131,7 +131,7 @@ body{
     text-align: left;
     font-family: Lato;
     font-size: 1.5em;
-        color: #1d3daf;
+    color: rgba(11, 36, 125, 0.94);
     
     
     border-bottom: 1px solid rgba(19, 19, 19, 0.2);
