--- a/app/views/highestsponsorshipofcsievents/_form.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_form.html.erb
@@ -22,45 +22,18 @@ during 01/07/2015 to 30/06/2016)
       <% end %>
       " disabled> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-4">
       <%= f.label :imno , "IMNO" %>
       <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
       required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
-    <div class="form-group col-md-1">
-      <label>Validity</label>
-      <input type="text" class="form-control" id="validity" value="<%= current_sbc_user_data.institute.validity %>" disabled> 
-    </div>
     
-    <div class="form-group col-md-2">
-      <label>Valid Till</label>
-      <input type="text" class="form-control" id="valid_till" value="
-      <% unless current_sbc_user_data.institute.valid_date.nil? %>
-      <%= current_sbc_user_data.institute.valid_date %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled>  
-    </div>
-    <div class="form-group col-md-2">
-      <label>District</label>
-      <input type="text" class="form-control" id="district"  value="
-      <% unless current_sbc_user_data.institute.district.nil? %>
-      <%= current_sbc_user_data.institute.district %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-4">
       <label>City</label>
       <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
-    <div class="form-group col-md-1">
-      <label>Pin</label>
-      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
-    </div>
-    <div class="form-group col-md-2">
+    
+    <div class="form-group col-md-4">
       <label>State</label>
       <input type="text" class="form-control" id="state"  value="
       <% unless current_sbc_user_data.institute.state.nil? %>
@@ -72,42 +45,29 @@ during 01/07/2015 to 30/06/2016)
     </div>
     
     <p class="primary-form-subheading">SBC Details</p>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
       <label>Name</label>
       <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
-    <div class="form-group col-md-2">
-      <label>Mem.No</label>
-      <input type="text" class="form-control" id="sbc-imno"  value="
-      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
-      <%= current_sbc_user_data.sbc_membership_no %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+    
     <div class="form-group col-md-3">
       <label>Email</label>
       <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
-    <div class="form-group col-md-3">
-      <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
-    </div>
-   
+ 
     
     
       
-    <div class="form-group col-md-1">
+    <div class="form-group col-md-3">
       <label>Volunteers</label>
       <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017"
       value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
     </div>
-    <div class="form-group col-md-1">
-      <%= f.label :volunteers_added  , "Added" %>
+    <div class="form-group col-md-3">
+      <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
+      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
     </div>
     
     </div>
