--- a/app/views/studentbranchactivists/_form.html.erb
+++ b/app/views/studentbranchactivists/_form.html.erb
@@ -20,40 +20,18 @@
       <% end %>
       " disabled> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <%= f.label :imno , "IMNO" %>
       <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
       required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     
-    <div class="form-group col-md-2">
-      <label>Valid Till</label>
-      <input type="text" class="form-control" id="valid_till" value="
-      <% unless current_sbc_user_data.institute.valid_date.nil? %>
-      <%= current_sbc_user_data.institute.valid_date %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled>  
-    </div>
-    <div class="form-group col-md-2">
-      <label>District</label>
-      <input type="text" class="form-control" id="district"  value="
-      <% unless current_sbc_user_data.institute.district.nil? %>
-      <%= current_sbc_user_data.institute.district %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+    
     <div class="form-group col-md-3">
       <label>City</label>
       <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
-    <div class="form-group col-md-3">
-      <label>Pin</label>
-      <input type="text" class="form-control" id="pin" value="<%= current_sbc_user_data.institute.pincode %>" disabled> 
-    </div>
+    
     <div class="form-group col-md-3">
       <label>State</label>
       <input type="text" class="form-control" id="state"  value="
@@ -77,26 +55,7 @@
       " disabled> 
     </div>
     
-    <div class="form-group col-md-3">
-      <label>Phone number</label>
-      <input type="text" class="form-control" id="na-phone" value="
-      <% unless current_sbc_user_data.institute.na_phone.nil? %>
-      <%= current_sbc_user_data.institute.na_phone %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-    <div class="form-group col-md-3">
-      <label>Email</label>
-      <input type="email" class="form-control" id="na-email" value="
-      <% unless current_sbc_user_data.institute.na_email.nil? %>
-      <%= current_sbc_user_data.institute.na_email %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+   
     
     
     
@@ -108,25 +67,23 @@
       <input type="text" class="form-control" id="sbc-name" value="<%= current_sbc_user_data.sbc_name %>" disabled>
     </div>
     
-    <div class="form-group col-md-3">
-      <label>Mem.No</label>
-      <input type="text" class="form-control" id="sbc-imno"  value="
-      <% unless current_sbc_user_data.sbc_membership_no.nil? %>
-      <%= current_sbc_user_data.sbc_membership_no %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+  
     <div class="form-group col-md-3">
       <label>Email</label>
       <input type="email" class="form-control" id="sbc-email" value="<%= current_sbc_user_data.sbc_email %>" disabled> 
     </div>
-    <div class="form-group col-md-3">
-      <label>Phonenumber</label>
-      <input type="text" class="form-control" id="sbc-phone" value="<%= current_sbc_user_data.sbc_phone %>" disabled> 
-    </div>
     
+     <div class="form-group col-md-3">
+      <label>Volunteers</label>
+      <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017" 
+      value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17 " %>
+      <%= f.text_field :volunteers_added , required: true , type: "number",
+      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
+    </div>
+
     
     
      <!--form specific details-->
@@ -141,25 +98,16 @@
       <%= f.label :csi_volunteer_email  , "Email" %>
       <%= f.email_field :csi_volunteer_email ,  required: true , type: "email", class: "form-control" %>
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <%= f.label :csi_volunteer_id , "CSI Mem.Id" %>
       <%= f.text_field :csi_volunteer_id  ,  required: true, class: "form-control" %>
     </div>
     
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <%= f.label :valid_till  , "Id Valid Till" %>
       <%= f.date_field :valid_till ,  required: true, class: "form-control" %>
     </div>
-    <div class="form-group col-md-1">
-      <label>Volunteers</label>
-      <input type="text" class="form-control" id="volunteers" title="Number of CSI Volunteers as on 30th  June  2017" 
-      value="<%= current_sbc_user_data.no_of_volunteers %>" disabled> 
-    </div>
-    <div class="form-group col-md-1">
-      <%= f.label :volunteers_added  , "Added" %>
-      <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
-    </div>
+   
     
     
     
