--- a/app/views/bestaccreditedstudentbranches/new.html.erb
+++ b/app/views/bestaccreditedstudentbranches/new.html.erb
@@ -1,5 +1,5 @@
 <h3 align="center">Best Accredited Student Branch Award</h2>
-
+<%= filepicker_js_include_tag %>
 <br>
 <% if is_sbc? %>
 <%= render "form" %>
