--- a/app/views/bestaccreditedstudentbranches/_form.html.erb
+++ b/app/views/bestaccreditedstudentbranches/_form.html.erb
@@ -236,6 +236,11 @@
     
     <br>
     
+     <div>
+        <%= f.label :attachment, "Upload Your Data:" %>
+        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+      </div>
+    
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
             <%= f.submit "Submit" , class: "btn btn-success btn-lg" %>
