--- a/app/views/welcome/_nav.html.erb
+++ b/app/views/welcome/_nav.html.erb
@@ -6,7 +6,7 @@
     <ul class="nav navbar-nav navbar-right">
       
       <% if user_signed_in? %>
-         <li><%= link_to current_user.email ,user_path(current_user) %> </li>
+         <li><a href="#"><%= current_user.email %></a></li>
         <li><%= link_to "Sign out" , destroy_user_session_path , method: :delete %></li>
       <% end %>
     </ul>
