--- a/app/views/regionalchapterawards/_form.html.erb
+++ b/app/views/regionalchapterawards/_form.html.erb
@@ -102,7 +102,7 @@
     </div>
     <div class="form-group col-md-3">
       <%= f.label :phone  %>
-      <%= f.text_field :phone , required: true ,pattern: "/(7|8|9)\d{9}/" , class: "form-control"%>
+      <%= f.text_field :phone , required: true , class: "form-control"%>
     </div>
     <div class="form-group col-md-3">
       <%= f.label :email  %>
