--- a/app/views/bestaccreditedstudentbranches/_form.html.erb
+++ b/app/views/bestaccreditedstudentbranches/_form.html.erb
@@ -237,7 +237,7 @@
     <br>
     
      <div>
-        <%= f.label :attachment, "Upload Your Data:" %>
+        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
         <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
       </div>
     
