--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -107,6 +107,10 @@ software competition participated by a minimum of 10 students from abroad 01/07/
         <%= link_to_add_association 'Add Event', f, :internationalevents , class: "form-button btn btn-primary" %>
     </div>
     
+    <div>
+        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
+        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+    </div>
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
