--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -172,6 +172,11 @@ during 01/07/2015 to 30/06/2016)
         <%= link_to_add_association 'Add Event', f, :publishingdetailbyfaculties , class: "form-button btn btn-primary" %>
     </div>
     
+    <div>
+        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
+        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+      </div>
+    
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
