--- a/app/views/highestsponsorshipofcsievents/_form.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_form.html.erb
@@ -100,6 +100,11 @@ during 01/07/2015 to 30/06/2016)
         <%= link_to_add_association 'Add Event', f, :supportforcsievents , class: "form-button btn btn-primary" %>
     </div>
    
+   
+   <div>
+        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
+        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+      </div>
     
     
     <div class="form-group">
