--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -104,6 +104,11 @@ over the past 3 years)
     
   <br></br>
    
+   
+   <div>
+        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
+        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+      </div>
     
     
     <div class="form-group">
