--- a/app/views/studentbranchactivists/_form.html.erb
+++ b/app/views/studentbranchactivists/_form.html.erb
@@ -131,6 +131,11 @@
         <%= link_to_add_association 'Add Event', f, :eventdetailsbystudentactivists , class: "form-button btn btn-primary" %>
     </div>
     
+    <div>
+        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
+        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+      </div>
+    
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
