--- a/app/views/welcome/_nav.html.erb
+++ b/app/views/welcome/_nav.html.erb
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
+     
+      <!--<a class="navbar-brand" id="brand-logo" href="#"><img src="http://www.gietbbsr.com/images/csi-logo.png"  id="logo"></img></a>-->
       <a class="navbar-brand" href="#">COMPUTER SOCIETY OF INDIA - Awards Committee (2017)</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
