--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,26 +10,26 @@
 <% if user_signed_in? && is_sbc? %>
 <h4 class="award-head"align="center">ACADEMIC AWARDS - STUDENT BRANCH</h4>
 <div class="award-title">
-    <p><%= link_to "Best Accredited Student Branch Award" , new_bestaccreditedstudentbranch_path %> </p>
+    <p><%= link_to "Best Accredited Student Branch " , new_bestaccreditedstudentbranch_path %> </p>
 </div>
 
 <div class="award-title">
-    <p><%= link_to "Best CSI International Students Event Host Award" , new_bestcsiinternationalstudentseventhost_path %> </p>
+    <p><%= link_to "Best CSI International Students Event Host " , new_bestcsiinternationalstudentseventhost_path %> </p>
 </div>
 
 <div class="award-title">
-    <p><%= link_to "Highest Sponsorship of CSI Event Award" , new_highestsponsorshipofcsievent_path %> </p>
+    <p><%= link_to "Highest Sponsorship of CSI Event " , new_highestsponsorshipofcsievent_path %> </p>
 </div>
 
 <div class="award-title">
-    <p><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </p>
+    <p><%= link_to "Longest Continuous SBC " ,new_longestcontinuoussbc_path %> </p>
 </div>
 <div class="award-title">
     <p><%= link_to "Students with maximum publishing – CSI publications" ,new_studentmaxpublishing_path %> </p>
 </div>
 
 <div class="award-title">
-    <p><%= link_to "Highest Committed Student Branch Activist Award" ,new_studentbranchactivist_path %> </p>
+    <p><%= link_to "Highest Committed Student Branch Activist " ,new_studentbranchactivist_path %> </p>
 </div>
 <% end %>
 
@@ -42,7 +42,7 @@
     <p><%= link_to "Paper Presenter at International Conference for Faculty" ,new_paperpresenter_path %> </p>
 </div>
 <div class="award-title">
-    <p><%= link_to "Best Ph D Thesis Award" ,new_bestthesisaward_path %> </p>
+    <p><%= link_to "Best Ph D Thesis " ,new_bestthesisaward_path %> </p>
 </div>
 <% end %>
 </div>
@@ -51,7 +51,7 @@
 <h4  class="award-head servie-awards" align="center">SERVICE AWARDS</h4>
 <% if user_signed_in?  %>
 <div class="award-title">
-    <p><%= link_to "Best Regional Chapter Award" , new_regionalchapteraward_path %> </p>
+    <p><%= link_to "Best Regional Chapter " , new_regionalchapteraward_path %> </p>
 </div>
 
 <div class="award-title">
@@ -59,7 +59,7 @@
 </div>
 
 <div class="award-title">
-    <p><%= link_to "Best Chapter Newsletter Award" , new_newsletteraward_path %> </p>
+    <p><%= link_to "Best Chapter Newsletter " , new_newsletteraward_path %> </p>
 </div>
 <% end %>
 
