--- a/app/views/bestaccreditedstudentbranches/_form.html.erb
+++ b/app/views/bestaccreditedstudentbranches/_form.html.erb
@@ -43,7 +43,7 @@
     <div class="form-group col-md-4">
       <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17 " %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "9999", maxlength: "4", class: "form-control" %>
+      min: "0" ,max: "9999", maxlength: "4", value: "00", class: "form-control" %>
     </div>
     </div>
      <!--form specific details-->
@@ -63,41 +63,41 @@
     <tbody>
       <tr>
         <td>Expert Lecture</td>
-        <td class="form-group col-md-4">
+        <td class="form-group col-md-2">
         
           <%= f.text_field :program_organised_expert_lecture_no_of_activities ,
-          required: true , type: "number",  min: "0" ,max: "100", maxlength: "3", class: "form-control"%>
+          required: true , type: "number",  min: "0" ,max: "100", value: "00", maxlength: "3", class: "form-control"%>
         
         </td>
       </tr>
       <tr>
         <td>Seminars / Technical workshop</td>
-        <td class="form-group col-md-4">
+        <td class="form-group col-md-2">
           <%= f.text_field :program_organised_seminars_workshops_no_of_activities ,required: true , type: "number",
-            min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+            min: "0" ,max: "100", maxlength: "3" , value: "00", class: "form-control"%>
         </td>
       </tr>
       <tr>
         <td>Short term training program</td>
-        <td class="form-group col-md-4">
+        <td class="form-group col-md-2">
          <%= f.text_field :program_organised_short_term_training_program_no_of_activities ,required: true , type: "number",
-           min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+           min: "0" ,max: "100", maxlength: "3" , value: "00", class: "form-control"%>
        
         </td>
       </tr>
       <tr>
         <td>Inter college Symposium</td>
-        <td class="form-group col-md-4">
+        <td class="form-group col-md-2">
             <%= f.text_field :program_organised_symposium_no_of_activities , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+              min: "0" ,max: "100", maxlength: "3", value: "00" , class: "form-control"%>
         
         </td>
       </tr>
       <tr>
         <td>Motivational talks</td>
-        <td class="form-group col-md-4">
+        <td class="form-group col-md-2">
             <%= f.text_field :program_organised_motivational_talks_no_of_activities ,required: true , type: "number",
-            min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+            min: "0" ,max: "100", maxlength: "3" , value: "00", class: "form-control"%>
        
         </td>
       </tr>
@@ -122,7 +122,7 @@
     <div class="form-group col-md-4">
       <%= f.label :student_branch_membership_no_of_volunteers , "# Volunteers" %>
       <%= f.text_field :student_branch_membership_no_of_volunteers  , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3", class: "form-control"%>
+              min: "0" ,max: "100", maxlength: "3", value: "00", class: "form-control"%>
     </div>
     
     <p class="primary-form-subheading">Competitions and Contests organised</p>
@@ -134,7 +134,7 @@
       </div>
     <div  class="col-md-4">
       <%= f.text_field :number_of_contests_organised_for_students  , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3", class: "form-control", id: "competitions-input"%>
+              min: "0" ,max: "100", maxlength: "3", value: "00", class: "form-control", id: "competitions-input"%>
     </div>          
     </div>
      
@@ -152,7 +152,7 @@
     <div class="form-group col-md-4">
       <%= f.label :convention_seminar_no_of_events_organised , "# Events" %>
       <%= f.text_field :convention_seminar_no_of_events_organised , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+              min: "0" ,max: "100", maxlength: "3" , value: "00", class: "form-control"%>
     </div>
     
     
@@ -186,11 +186,11 @@
         </td>
         <td class="form-group col-md-3">
             <%= f.text_field :no_of_faculty_as_csi_members_life , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+              min: "0" ,max: "100", maxlength: "3" , value: "00", class: "form-control"%>
         </td>
         <td class="form-group col-md-3">
             <%= f.text_field :no_of_faculty_as_csi_members_annual , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3" , class: "form-control"%>
+              min: "0" ,max: "100", maxlength: "3", value: "00" , class: "form-control"%>
         </td>
       </tr>
       
@@ -229,7 +229,7 @@
     <div class="form-group col-md-4">
       <%= f.label :no_of_issues_published_in_newsletter , "# Issues Published" %>
       <%= f.text_field :no_of_issues_published_in_newsletter  , required: true , type: "number",
-              min: "0" ,max: "100", maxlength: "3", class: "form-control"%>
+              min: "0" ,max: "100", maxlength: "3", value: "00", class: "form-control"%>
     </div>
     </div>
     </div>
@@ -240,6 +240,9 @@
         <%= f.label :attachment, "Upload Your Data in Zip file:" %>
         <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
       </div>
+    
+    
+     
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
